--- a/07-PO33Q.html
+++ b/07-PO33Q.html
@@ -78,7 +78,6 @@ div.csl-indent {
 
 
 <script src="site_libs/quarto-nav/quarto-nav.js"></script>
-<script src="site_libs/quarto-nav/headroom.min.js"></script>
 <script src="site_libs/clipboard/clipboard.min.js"></script>
 <script src="site_libs/quarto-search/autocomplete.umd.js"></script>
 <script src="site_libs/quarto-search/fuse.min.js"></script>
@@ -96,18 +95,17 @@ div.csl-indent {
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
 <link href="site_libs/bootstrap/bootstrap-7c884608bb88d9d23eddf9360d6659a5.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
-  "location": "sidebar",
+  "location": "navbar",
   "copy-button": false,
   "collapse-after": 3,
-  "panel-placement": "start",
-  "type": "textbox",
+  "panel-placement": "end",
+  "type": "overlay",
   "limit": 50,
   "keyboard-shortcut": [
     "f",
     "/",
     "s"
   ],
-  "show-item-context": false,
   "language": {
     "search-no-results-text": "No results",
     "search-matching-documents-text": "matching documents",
@@ -162,10 +160,25 @@ window.Quarto = {
 <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="nav-sidebar floating">
+<body class="nav-sidebar floating nav-fixed">
 
 <div id="quarto-search-results"></div>
   <header id="quarto-header" class="headroom fixed-top">
+    <nav class="navbar navbar-expand-lg " data-bs-theme="dark">
+      <div class="navbar-container container-fluid">
+      <div class="navbar-brand-container mx-auto">
+    <a href="./index.html" class="navbar-brand navbar-brand-logo">
+    <img src="./images/Crest_white.png" alt="" class="navbar-logo">
+    </a>
+    <a class="navbar-brand" href="./index.html">
+    <span class="navbar-title">PO33Q - Determinants of Democracy</span>
+    </a>
+  </div>
+        <div class="quarto-navbar-tools tools-end">
+</div>
+          <div id="quarto-search" class="" title="Search"></div>
+      </div> <!-- /container-fluid -->
+    </nav>
   <nav class="quarto-secondary-nav">
     <div class="container-fluid d-flex">
       <button type="button" class="quarto-btn-toggle btn" data-bs-toggle="collapse" role="button" data-bs-target=".quarto-sidebar-collapse-item" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
@@ -174,26 +187,13 @@ window.Quarto = {
         <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./07-PO33Q.html"><span class="chapter-title">Week 7</span></a></li></ol></nav>
         <a class="flex-grow-1" role="navigation" data-bs-toggle="collapse" data-bs-target=".quarto-sidebar-collapse-item" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">      
         </a>
-      <button type="button" class="btn quarto-search-button" aria-label="Search" onclick="window.quartoOpenSearch();">
-        <i class="bi bi-search"></i>
-      </button>
     </div>
   </nav>
 </header>
 <!-- content -->
-<div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article">
+<div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article page-navbar">
 <!-- sidebar -->
   <nav id="quarto-sidebar" class="sidebar collapse collapse-horizontal quarto-sidebar-collapse-item sidebar-navigation floating overflow-auto">
-    <div class="pt-lg-2 mt-2 text-left sidebar-header">
-    <div class="sidebar-title mb-0 py-0">
-      <a href="./"><img src="images/Crest_white.png" width="75" style="display:block; margin:auto; margin-bottom:3em;"> PO33Q: Determinants of Democracy – <br> Analysing Emergence, Survival, and Fall</a> 
-    </div>
-      </div>
-        <div class="mt-2 flex-shrink-0 align-items-center">
-        <div class="sidebar-search">
-        <div id="quarto-search" class="" title="Search"></div>
-        </div>
-        </div>
     <div class="sidebar-menu-container"> 
     <ul class="list-unstyled mt-1">
         <li class="sidebar-item">
@@ -1647,8 +1647,8 @@ Figure&nbsp;6: ROC Curve
 
     <script>
 
-      function styleCell_5vxgbp4elymsmy0advjw(i, j, css_id) {
-          var table = document.getElementById("tinytable_5vxgbp4elymsmy0advjw");
+      function styleCell_8kdv6tpr42g3w62ih1ku(i, j, css_id) {
+          var table = document.getElementById("tinytable_8kdv6tpr42g3w62ih1ku");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1657,8 +1657,8 @@ Figure&nbsp;6: ROC Curve
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_5vxgbp4elymsmy0advjw(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_5vxgbp4elymsmy0advjw");
+      function spanCell_8kdv6tpr42g3w62ih1ku(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_8kdv6tpr42g3w62ih1ku");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -1689,26 +1689,26 @@ Figure&nbsp;6: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_rga9oddzvy96ah62jk06',}, 
-          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_zhbgq0rwykqu3zbq9stj',}, 
-          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_9khvc2zzd2m7yt8e8xby',}, 
-          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_rd8lf2jwqry3r0bb7eo8',}, 
-          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_5payqjcghapvz27rt4m9',}, 
-          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_xqzx0nu4eytlyxpc1ndq',}, 
-          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_zcp4xxowi1c0ijz65uje',}, 
-          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_rv59hajy8kwvvajv7l5x',}, 
-          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_t7ok8n9bartvouszjkv3',}, 
-          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_0r02ng0pcygmeco0kjby',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_d0gdicv2r1tey9s0x5oi',}, 
-          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_fc4dqyctpbrhk8djij2y',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_d6qsy1c12r5p6t922ccg',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_1nf1pagq0kruww5m8wfq',}, 
+          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_pb9kujeh6imd5umkuemz',}, 
+          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_a4o9n04i4e0dr01n3k7d',}, 
+          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_3tejp95q0ul05hk1d8er',}, 
+          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_edq8nndhq2vug41lc7yd',}, 
+          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_5se9ayo8swu4gqmidlkw',}, 
+          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_z6axtjqelquci1j08123',}, 
+          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_nv8geqgg1dcky2zsnum4',}, 
+          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_5wyxxp96jpbn3juolbbm',}, 
+          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_t4pr18z0mo0pry1af8l8',}, 
+          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_9iypf69f2vg95tl5qe1r',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_k0lic6gsfzmcd5udk56h',}, 
+          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_rq523ib7ad76gwne89is',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_57laz4djrpzu7ko9fjit',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_v467qga35mfm5lr2asjt',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_5vxgbp4elymsmy0advjw(cell.i, cell.j, group.css_id);
+                  styleCell_8kdv6tpr42g3w62ih1ku(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1716,23 +1716,23 @@ Figure&nbsp;6: ROC Curve
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_rga9oddzvy96ah62jk06, .table th.tinytable_css_rga9oddzvy96ah62jk06 { text-align: center; text-align: center; }
-      .table td.tinytable_css_zhbgq0rwykqu3zbq9stj, .table th.tinytable_css_zhbgq0rwykqu3zbq9stj { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_9khvc2zzd2m7yt8e8xby, .table th.tinytable_css_9khvc2zzd2m7yt8e8xby { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_rd8lf2jwqry3r0bb7eo8, .table th.tinytable_css_rd8lf2jwqry3r0bb7eo8 { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_5payqjcghapvz27rt4m9, .table th.tinytable_css_5payqjcghapvz27rt4m9 { text-align: center; }
-      .table td.tinytable_css_xqzx0nu4eytlyxpc1ndq, .table th.tinytable_css_xqzx0nu4eytlyxpc1ndq { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_zcp4xxowi1c0ijz65uje, .table th.tinytable_css_zcp4xxowi1c0ijz65uje { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_rv59hajy8kwvvajv7l5x, .table th.tinytable_css_rv59hajy8kwvvajv7l5x { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_t7ok8n9bartvouszjkv3, .table th.tinytable_css_t7ok8n9bartvouszjkv3 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_0r02ng0pcygmeco0kjby, .table th.tinytable_css_0r02ng0pcygmeco0kjby { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_d0gdicv2r1tey9s0x5oi, .table th.tinytable_css_d0gdicv2r1tey9s0x5oi { text-align: left; }
-      .table td.tinytable_css_fc4dqyctpbrhk8djij2y, .table th.tinytable_css_fc4dqyctpbrhk8djij2y { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_d6qsy1c12r5p6t922ccg, .table th.tinytable_css_d6qsy1c12r5p6t922ccg { text-align: left; text-align: center; }
-      .table td.tinytable_css_1nf1pagq0kruww5m8wfq, .table th.tinytable_css_1nf1pagq0kruww5m8wfq { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_pb9kujeh6imd5umkuemz, .table th.tinytable_css_pb9kujeh6imd5umkuemz { text-align: center; text-align: center; }
+      .table td.tinytable_css_a4o9n04i4e0dr01n3k7d, .table th.tinytable_css_a4o9n04i4e0dr01n3k7d { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_3tejp95q0ul05hk1d8er, .table th.tinytable_css_3tejp95q0ul05hk1d8er { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_edq8nndhq2vug41lc7yd, .table th.tinytable_css_edq8nndhq2vug41lc7yd { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_5se9ayo8swu4gqmidlkw, .table th.tinytable_css_5se9ayo8swu4gqmidlkw { text-align: center; }
+      .table td.tinytable_css_z6axtjqelquci1j08123, .table th.tinytable_css_z6axtjqelquci1j08123 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_nv8geqgg1dcky2zsnum4, .table th.tinytable_css_nv8geqgg1dcky2zsnum4 { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_5wyxxp96jpbn3juolbbm, .table th.tinytable_css_5wyxxp96jpbn3juolbbm { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_t4pr18z0mo0pry1af8l8, .table th.tinytable_css_t4pr18z0mo0pry1af8l8 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_9iypf69f2vg95tl5qe1r, .table th.tinytable_css_9iypf69f2vg95tl5qe1r { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_k0lic6gsfzmcd5udk56h, .table th.tinytable_css_k0lic6gsfzmcd5udk56h { text-align: left; }
+      .table td.tinytable_css_rq523ib7ad76gwne89is, .table th.tinytable_css_rq523ib7ad76gwne89is { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_57laz4djrpzu7ko9fjit, .table th.tinytable_css_57laz4djrpzu7ko9fjit { text-align: left; text-align: center; }
+      .table td.tinytable_css_v467qga35mfm5lr2asjt, .table th.tinytable_css_v467qga35mfm5lr2asjt { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_5vxgbp4elymsmy0advjw" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_8kdv6tpr42g3w62ih1ku" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-2" data-col="0"> </th>
